// Copyright 2022 Google LLC All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "github.com/google/containerdbg/proto";

import "google/protobuf/timestamp.proto";

message DnsQueryError {
  enum ErrorCode {
      OK = 0;
      UNKNOWN = 1;
  }
  ErrorCode code = 1;
}

message SourceId {
  string type = 1;
  string id = 2;
}

message Event {
  google.protobuf.Timestamp timestamp = 1;
  // TODO: Add TID/PID
  SourceId source = 2;
  message SyscallEvent {
    string comm = 1;
    int64 ret_code = 2;
    message OpenSyscall {
      string path = 1;
    }
    message RenameSyscall {
      string oldname = 1;
      string newname = 2;
    }
    message LinkSyscall {
      string oldname = 1;
      string newname = 2;
    }
    oneof syscall {
      OpenSyscall open = 4;
      RenameSyscall rename = 5;
      LinkSyscall link = 6;
    }
  }
  message NetworkEvent {
    enum NetworkEventType {
      UNUSED = 0; // As default protobuf text doesn't print 0s - should fix this
      LISTEN = 1;
      FAILED_CONNECTION = 2;
      INITIATE_CONNECTION = 3;
    }
    string comm = 1;
    NetworkEventType event_type = 2;
    int32 addr_fam = 3;
    string src_addr = 4;
    string dst_addr = 5;
    int32 src_port = 6;
    int32 dst_port = 7;
  }
  message DnsQueryEvent {
    string query = 1;

    oneof answer {
       string ip = 2;
       DnsQueryError error = 3;
    }
  }
  message DnsSearchParametersProbe {
    repeated string search = 1;
  }
  oneof event_type {
      SyscallEvent syscall = 3;
      NetworkEvent network = 4;
      DnsQueryEvent dns_query = 5;
      DnsSearchParametersProbe dns_search = 6;
  }
}
