// Copyright 2022 Google LLC All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "github.com/google/containerdbg/proto";

import "event.proto";

message MonitorPodRequest {
  SourceId id = 1;
  // 0 means it was not specified
  uint64 netns = 2;
}

message MonitorPodResponse {
  enum ErrorCode {
    OK = 0;
    UNKNOWN = 1;
  }
  ErrorCode code = 1;
}


message ReportDnsQueryResultRequest {
  SourceId id = 4;
  string dns_query = 1;
  oneof result {
    string returned_ip = 2;
    DnsQueryError error = 3;
  }
}

message ReportDnsQueryResultResponse {

}

message ReportDnsSearchValuesRequest {
    repeated string search = 1;
    SourceId id = 2;
}

message ReportDnsSearchValuesResponse {}

service NodeDaemonService {
  rpc Monitor(MonitorPodRequest) returns (MonitorPodResponse);
  rpc ReportDnsQuery(ReportDnsQueryResultRequest) returns (ReportDnsQueryResultResponse);
  rpc ReportDnsSearchValues(ReportDnsSearchValuesRequest) returns (ReportDnsSearchValuesResponse);
}
